src/tests/testfiles/variable-declarations/17.txt
Error at 2:9: Empty scalar initializer
int aa = {};
    ^
